--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        this is gonna go great!
+        this is gonna go great!!
     </body>
 </html>
